--- a/docs/notebooks.ipynb
+++ b/docs/notebooks.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "As it is markdown, you can embed images, HTML, etc into your posts!\n",
     "\n",
-    "![](https://myst-parser.readthedocs.io/en/latest/_static/logo-wide.svg)\n",
+    "![](https://myst-parser.readthedocs.io/en/latest/_static/logo-wide.svg){.bg-warning w=100px align=center}\n",
     "\n",
     "You can also $add_{math}$ and\n",
     "\n",
