--- a/docs/notebooks.ipynb
+++ b/docs/notebooks.ipynb
@@ -14,7 +14,8 @@
     "As it is markdown, you can embed images, HTML, etc into your posts!\n",
     "\n",
     "![](https://myst-parser.readthedocs.io/en/latest/_static/logo-wide.svg)\n",
-     <img src="https://myst-parser.readthedocs.io/en/latest/_static/logo-wide.svg" alt="logo" width="200px" class="bg-primary">
+    "\n",
+     "![]<img src="https://myst-parser.readthedocs.io/en/latest/_static/logo-wide.svg" alt="logo" width="200px" class="bg-primary">\n"
     "\n",
     "You can also $add_{math}$ and\n",
     "\n",
